--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <p class="subheading">also known as <span>Johnny Bui</span></p>
         <p>
             I'm Phuc Bui (Johnny), <br />
-a Software Engineer with expertise in open-source full-stack development, AI Prompt Engineering, 
+a Software Engineer with expertise in open-source full-stack development, AI Prompt Engineering, Agentic AI Engineering 
             and solution architecture for software and cloud stacks.
         </p>
         <div class="links">
